# perm

./: Cargo.toml  README.md
.github/workflows/: main.yml
benches/: benchmark.rs
src/: lib.rs  main.rs  permutations.rs
src/permutations/: into_chunks.rs  into_optimized_chunks.rs  utils.rs
