[package]
name = "perm"
version = "0.1.0"
authors = ["angelocat <catalaniangelo@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "perm"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = {version="0.3", features = ["html_reports"] }
