[package]
name = "perm"
version = "0.1.0"
authors = ["angelocat <catalaniangelo@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "perm"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
crossbeam = "0.8"

[dev-dependencies]
criterion = { version = "0.3" }
fake = "~2.3"
itertools = "0.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand = { version = "0.8", features = ["std_rng"] }

